# fspatch

./: LICENSE  Makefile  README.md  setup.cfg  setup.py
fspatch/: __main__.py  _patch.py  _version.py  context.py  os_patches.py
tests/: test_os.py
