[bdist_wheel]
universal = 1

[metadata]
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
project_urls =
    Bug Reports = https://github.com/PyFilesystem/fspatch/issues

[pydocstyle]
inherit = false
ignore = D102,D105,D200,D203,D213,D406,D407
match-dir = (?!tests)(?!docs)[^\.].*
match = (?!test)(?!setup)[^\._].*\.py


[coverage:report]
show_missing = true
exclude_lines =
    pragma: no cover
    if False:
    @typing.overload

